testsuite/tests/interpreter_errors/invalid_kind/test.out
main.adb
script.lkql:1:12: error: Invalid kind name: PreposterouslyInvalidKind
1 | select p @ PreposterouslyInvalidKind
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^ 

